--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,7 @@ android {
     buildToolsVersion '28.0.1'
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.github.billthefarmer:mididriver:v1.15'
     implementation 'org.jcodec:jcodec-android:0.2.3'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation files('android-midi-lib/android-midi-lib-1.0-SNAPSHOT.jar')
 }
 
